--- a/api/package.json
+++ b/api/package.json
@@ -7,10 +7,13 @@
     "dev": "ts-node-dev  --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "sqlite3": "^5.0.2",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.2"
   }
