--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2"
